# ros_brics

./: .gitignore  CMakeLists.txt  package.xml
action/: MoveToPose.action
config/: bricks.rviz  waypoints.json
launch/: brics.launch  yolov8_obb.launch.py
msg/: DetectionResult.msg  InferenceResult.msg  RobotState.msg  Yolo.msg
scripts/: aruco_publisher.py  camera_publisher.py  joint_transform_printer.py  pipeline.py  printer.py  robot_state.py  save_transform.py  test_movepy.py  yolo_node.py  yolo_subscriber.py  yolov8_obb_publisher.py  yolov8_obb_subscriber.py
src/: move_program.cpp  move_program_gui.cpp  move_program_listener.cpp  move_to_pose_server.cpp  scheduler.cpp  test_move.cpp  waypoint_navigator.cpp
srv/: ProcessBrick.srv
